Closed
Bug 235721
Opened 21 years ago
Closed 21 years ago
You can't use brackets in an HTML form (non-us keyboard)
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
Camino0.8
People
(Reporter: hidalgoj, Assigned: sfraser_bugs)
References
()
Details
User-Agent:
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.7b) Gecko/20040225 Camino/0.7+
I'm under Panther X.3.2 and I have a french (AZERTY) keyboard.
I just cannot use brackets anymore, which is VERY annoying, especially in phpBB
forums, because I cannot type in any form of BBcode.
I have looked through all the latest nightlies, and here are my conclusions :
- Until the 18-Feb-04 nightly (included) : brackets work fine.
- 19-Feb-04 to 24-Feb-04 : all nightlies crash on Panther X.3.2.
- 25-Feb-04 : nightly works, but brackets don't work anymore.
I hope it helps !!! :-)
Reproducible: Always
Steps to Reproduce:
1. Go to any HTML form where you can type in text
2. Try to type brackets (I don't know if only AZERTY keyboards are concerned)
3. You shouldn't be able to.
Actual Results:
Brackets don't appear.
Expected Results:
To make brackets appear ! ;-)
Comment 1•21 years ago
|
||
can you test this in firebird or seamonkey as well?
another person emailed me saying that they can no longer type "@" on german
keyboards as well.
Summary: You can't use brackets in an HTML form. For instance, while I'm typing this line, I cannot use brackets !! → You can't use brackets in an HTML form (non-us keyboard)
Comment 2•21 years ago
|
||
Works in seamonkey. Broken in Camino.
alt-shift-key don't draw. i-on french keybord @ is not such a combi.
I'm on 10.2.8. Reporter what is your OS.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Comment 3•21 years ago
|
||
*** Bug 235739 has been marked as a duplicate of this bug. ***
Updated•21 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → Camino0.8
Any character that requires option or shift+option, with the exception of the
"accent" characters that allow the input of a second character (opt+`, opt+e,
opt+u, opt+i, opt+n), is no longer functional in form fields.
Assignee | ||
Comment 5•21 years ago
|
||
This was fallout from my fix for bug 170112.
Assignee: pinkerton → sfraser
Status: ASSIGNED → NEW
Assignee | ||
Comment 6•21 years ago
|
||
Fix:
Index: nsChildView.mm
===============================================================
====
RCS file: /cvsroot/mozilla/widget/src/cocoa/nsChildView.mm,v
retrieving revision 1.77
diff -u -r1.77 nsChildView.mm
--- nsChildView.mm 24 Feb 2004 03:40:27 -0000 1.77
+++ nsChildView.mm 27 Feb 2004 07:10:19 -0000
@@ -2944,9 +2945,6 @@
geckoEvent.charCode = bufPtr[0]; // gecko expects OS-translated unicode
geckoEvent.isChar = PR_TRUE;
geckoEvent.isShift = ([mCurEvent modifierFlags] & NSShiftKeyMask) != 0;
- geckoEvent.isControl = ([mCurEvent modifierFlags] & NSControlKeyMask) != 0;
- geckoEvent.isAlt = ([mCurEvent modifierFlags] & NSAlternateKeyMask) != 0;
- geckoEvent.isMeta = ([mCurEvent modifierFlags] & NSCommandKeyMask) != 0;
// plugins need a native autokey event here, but only if this is a repeat event
EventRecord macEvent;
I left the shift modifier setting in there so bug 170112 remains fixed.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Comment 7•21 years ago
|
||
wait, why don't we ever want to set those flags?
Assignee | ||
Comment 8•21 years ago
|
||
I added them in the fix for bug 170112. Since we're in [inserText:] here, I
think the option key has already been taken into account in generating the
character to be inserted, so adding it again here is wrong.
However, we may want to still set the cmdKey modifier (maybe this will fix stuff
like command-arrows, and command-page up/pagedown?)
Updated•21 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•