Fix bug 235721, which was a regression from the fix for bug 170112. Setting all the modifiers on the event causes typing problems, so only set the shift modifier for now.